# ninja-telegram-bot

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 322132ed4ca6_first_revision.py  56e14a7595d9_create_forum_integration.py  6c480b872abf_add_nonce_to_user.py
bot/: __init__.py  __main__.py  config.py  constants.py  db.py  run_polling.py  run_webhooks.py
bot/filters/: __init__.py  has_user_in_args.py  is_chat_allowed.py  is_user_reply_to_user.py  reputation_change.py
bot/handlers/: __init__.py  authorization.py  discourse.py  exec.py  help.py  horoscope.py  on_any_message.py  on_join_or_left.py  reputation.py  rules.py  trust_levels.py  users.py  voice_to_text.py
bot/models/: __init__.py  base.py  db.py  messages_history.py  reputation_update.py  user.py  user_script.py
bot/services/: auto_delete.py  daily_job.py  discourse.py  messages_history.py  reputation.py  reputation_update.py  user.py  voice_to_text.py  yandex_weather.py
bot/utils/: decorators.py  plural_forms.py  user_api_keys.py
bot/utils/google/api/: annotations_pb2.py  http_pb2.py
bot/utils/google/rpc/: status_pb2.py
bot/utils/safe_exec/: executor.py  secure_compiler.py
bot/utils/yandex/cloud/ai/stt/v2/: stt_service_pb2.py  stt_service_pb2_grpc.py
bot/utils/yandex/cloud/api/: operation_pb2.py
bot/utils/yandex/cloud/operation/: operation_pb2.py
cloudapi-master/output/google/api/: http_pb2.py
cloudapi-master/output/yandex/cloud/api/: operation_pb2.py
(+4 files in other folders)
