[tool.poetry]
name = "ninja-telegram-bot"
version = "0.1.0"
description = "Mirea Ninja Community Chat Bot"
authors = ["Sergey Dmitriev <51058739+0niel@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.4.37"
envparse = "^0.2.0"
pydantic = {extras = ["dotenv"], version = "^1.10.4"}
requests = "^2.28.0"
psycopg2-binary = "^2.9.3"
pytz = "^2022.1"
grpcio-tools = "^1.46.3"
gcloud = "^0.18.3"
google-api-python-client = "^2.51.0"
python-telegram-bot-pagination = "^0.0.2"
beautifulsoup4 = "^4.11.1"
Pillow = "^9.1.1"
gTTS = "^2.2.4"
asyncpg = "^0.27.0"
python-telegram-bot = {extras = ["job-queue"], version = "^20.0"}
alembic = "^1.9.2"
httpx = "^0.23.3"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
pycryptodome = "^3.16.0"

[tool.poetry.dev-dependencies]
mypy = "^0.942"
black = "^22.3.0"
isort = "^5.10.1"
autoflake = "^1.4"
flake8 = "^4.0.1"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
